--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -13,7 +13,32 @@ spring:
     username: ${CONFIG_SERVER_USR}
     password: ${CONFIG_SERVER_PWD}
 
+server:
+  port: 6378
+  logging:
+    level:
+      org.springframework: DEBUG
+
 ---
 spring.config.activate.on-profile: docker
 
-spring.cloud.config.uri: http://config-server:8888
+spring:
+  profiles:
+    active: docker
+
+  application:
+    name: vote
+  cloud:
+    config:
+      failFast: true
+      retry:
+        initialInterval: 3000
+        multiplier: 1.3
+        maxInterval: 10000
+        maxAttempts: 20
+      uri: ${spring.cloud.config.uri:http://localhost:8890}
+      username: ${CONFIG_SERVER_USR}
+      password: ${CONFIG_SERVER_PWD}
+      enabled: false
+
+  cloud.config.uri: http://localhost:9789
