--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,31 +1,5 @@
-spring.config.import: "configserver:"
 
 spring:
-  application.name: course
-  cloud.config:
-    failFast: true
-    retry:
-      initialInterval: 3000
-      multiplier: 1.3
-      maxInterval: 10000
-      maxAttempts: 20
-    uri: http://localhost:8888
-    username: ${CONFIG_SERVER_USR}
-    password: ${CONFIG_SERVER_PWD}
-
-server:
-  port: 6378
-  logging:
-    level:
-      org.springframework: DEBUG
-
----
-spring.config.activate.on-profile: docker
-
-spring:
-  profiles:
-    active: docker
-
   application:
     name: vote
   cloud:
@@ -36,9 +10,22 @@ spring:
         multiplier: 1.3
         maxInterval: 10000
         maxAttempts: 20
-      uri: ${spring.cloud.config.uri:http://localhost:8890}
+      uri: ${spring.cloud.config.uri:http://localhost:8888}
       username: ${CONFIG_SERVER_USR}
       password: ${CONFIG_SERVER_PWD}
-      enabled: false
 
-  cloud.config.uri: http://localhost:9789
+server:
+  port: 6378
+  logging:
+    level:
+      org.springframework: DEBUG
+
+---
+spring:
+  profiles:
+    active: docker
+
+  cloud:
+    config:
+      uri: http://localhost:9789
+      enabled: false
