--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,4 +1,3 @@
-
 spring:
   application:
     name: vote
@@ -15,7 +14,7 @@ spring:
       password: ${CONFIG_SERVER_PWD}
 
 server:
-  port: 6378
+  port: ${server.port:6378}  # Added fallback value
   logging:
     level:
       org.springframework: DEBUG
