--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -14,7 +14,7 @@ spring:
       password: ${CONFIG_SERVER_PWD}
 
 server:
-  port: ${server.port:6378}  # Added fallback value
+  port: 6369
   logging:
     level:
       org.springframework: DEBUG
