--- a/pom.xml
+++ b/pom.xml
@@ -1,68 +1,48 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
-
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-parent</artifactId>
-        <version>3.0.5</version>
-        <relativePath/> <!-- lookup parent from repository -->
+        <groupId>io.javatab.microservices</groupId>
+        <artifactId>my-project</artifactId>
+        <version>1.0.0</version>
+        <relativePath>../pom.xml</relativePath>
     </parent>
 
-    <groupId>io.javatab.microservices.core.course</groupId>
     <artifactId>course-service</artifactId>
     <version>1.0.0</version>
     <name>course-service</name>
     <description>Demo project for Spring Boot</description>
 
-    <properties>
-        <java.version>17</java.version>
-        <testcontainers.version>1.16.2</testcontainers.version>
-        <spring-cloud.version>2022.0.1</spring-cloud.version>
-        <cyclonedx.schema.version>1.5</cyclonedx.schema.version>
-        <cyclonedx.output.format>xml</cyclonedx.output.format>
-        <cyclonedx.output.name>bom</cyclonedx.output.name>
-        <cyclonedx.destination.dir>${project.build.directory}/reports</cyclonedx.destination.dir>
-        <cyclonedx.component.version>2.0.0</cyclonedx.component.version>
-    </properties>
-
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-actuator</artifactId>
-            <version>3.0.5</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-webflux</artifactId>
-            <version>3.0.5</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-mongodb</artifactId>
-            <version>3.0.5</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
-            <version>4.0.1</version>
         </dependency>
         <dependency>
             <groupId>org.mapstruct</groupId>
             <artifactId>mapstruct</artifactId>
-            <version>1.3.1.Final</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-config</artifactId>
-            <version>4.0.1</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.retry</groupId>
             <artifactId>spring-retry</artifactId>
-            <version>1.3.4</version>
         </dependency>
         <!-- Internal Dependencies -->
         <dependency>
