--- a/pom.xml
+++ b/pom.xml
@@ -3,12 +3,13 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <parent>
-        <groupId>io.javatab.microservices</groupId>
-        <artifactId>my-project</artifactId>
-        <version>1.0.0</version>
-        <relativePath>../pom.xml</relativePath>
+       <parent>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-parent</artifactId>
+        <version>3.0.5</version> <!-- Update to the latest stable Spring Boot version -->
+        <relativePath/> <!-- lookup parent from repository -->
     </parent>
+
 
     <artifactId>course-service</artifactId>
     <version>1.0.0</version>
