--- a/pom.xml
+++ b/pom.xml
@@ -54,12 +54,6 @@
             <artifactId>spring-data-commons</artifactId>
         </dependency>
         
-        <!-- Spring Data Repository Support -->
-        <dependency>
-            <groupId>org.springframework.data</groupId>
-            <artifactId>spring-data-commons</artifactId>
-        </dependency>
-
         <!-- Optional dependencies -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -117,6 +111,18 @@
         <dependency>
             <groupId>io.projectreactor</groupId>
             <artifactId>reactor-test</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.testcontainers</groupId>
+            <artifactId>testcontainers</artifactId>
+            <version>1.17.3</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.testcontainers</groupId>
+            <artifactId>mongodb</artifactId>
+            <version>1.17.3</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
